--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -144,6 +144,9 @@
 "item.mmorpg.skill_gems.support.dex": "Support Gem",
 "item.mmorpg.skill_gems.support.str": "Support Gem",
 
+"item.mmorpg.skill_gems.aura.int": "Augment",
+"item.mmorpg.skill_gems.aura.dex": "Augment",
+"item.mmorpg.skill_gems.aura.str": "Augment",
 
 "stat.mmorpg.levels_gained": "M&S Level",
 "stat.mmorpg.mana": "M&S Max Mana",
@@ -507,7 +510,7 @@
 
 "_comment": " [CATEGORY]: LOOTBOXES - NAMES",
 
-	"mmorpg.chest_content.aura": "Aura",
+	"mmorpg.chest_content.aura": "Augment",
 	"mmorpg.chest_content.currency": "Currency",
 	"mmorpg.chest_content.gear": "Gear",
 	"mmorpg.chest_content.gem": "Gem",
@@ -1881,21 +1884,6 @@
 "_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
 
 
-"_comment": " [CATEGORY]: STATPRIORITY - NAMES",
-
-	"mmorpg.stat_priority.after_damage_bonuses": "AFTER_DAMAGE_BONUSES",
-	"mmorpg.stat_priority.before_damage_layers": "BEFORE_DAMAGE_LAYERS",
-	"mmorpg.stat_priority.before_hit_prevention": "BEFORE_HIT_PREVENTION",
-	"mmorpg.stat_priority.calc_damage_layers": "CALC_DAMAGE_LAYERS",
-	"mmorpg.stat_priority.damage_layers": "DAMAGE_LAYERS",
-	"mmorpg.stat_priority.data_modification": "DATA_MODIFICATION",
-	"mmorpg.stat_priority.final_damage": "FINAL_DAMAGE",
-	"mmorpg.stat_priority.first": "FIRST",
-	"mmorpg.stat_priority.hit_prevention": "HIT_PREVENTION",
-
-"_comment": " [CATEGORY]: STATPRIORITY - NAMES",
-
-
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
 
 	"item.mmorpg.jewelry.necklace.diamond": "Necklace",
@@ -1910,6 +1898,21 @@
 	"item.mmorpg.weapon.staff.wood": "Staff",
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
+
+
+"_comment": " [CATEGORY]: STATPRIORITY - NAMES",
+
+	"mmorpg.stat_priority.after_damage_bonuses": "AFTER_DAMAGE_BONUSES",
+	"mmorpg.stat_priority.before_damage_layers": "BEFORE_DAMAGE_LAYERS",
+	"mmorpg.stat_priority.before_hit_prevention": "BEFORE_HIT_PREVENTION",
+	"mmorpg.stat_priority.calc_damage_layers": "CALC_DAMAGE_LAYERS",
+	"mmorpg.stat_priority.damage_layers": "DAMAGE_LAYERS",
+	"mmorpg.stat_priority.data_modification": "DATA_MODIFICATION",
+	"mmorpg.stat_priority.final_damage": "FINAL_DAMAGE",
+	"mmorpg.stat_priority.first": "FIRST",
+	"mmorpg.stat_priority.hit_prevention": "HIT_PREVENTION",
+
+"_comment": " [CATEGORY]: STATPRIORITY - NAMES",
 
 
 "_comment": " [CATEGORY]: STAT LAYER - NAMES",
@@ -2061,143 +2064,6 @@
 	"mmorpg.chat.you_lack_jewel_slots": "You lack jewel slots! You gain these typically from the Talent tree. You can use the search bar in the Talents screen to find them.",
 
 "_comment": " [CATEGORY]: CHAT MESSAGES - NAMES",
-
-
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
-
-	"mmorpg.affix.amber_amulet": "Amber Amulet",
-	"mmorpg.affix.arcane_staff": "Arcane Staff",
-	"mmorpg.affix.archeologists": "Archeologist's",
-	"mmorpg.affix.armor_eye": "Unused",
-	"mmorpg.affix.ass_bow": "Assassin Bow",
-	"mmorpg.affix.ass_crossbow": "Assassin Crossbow",
-	"mmorpg.affix.azure": "Azure",
-	"mmorpg.affix.bandit_mask": "Bandit Mask",
-	"mmorpg.affix.bone_bow": "Bone Bow",
-	"mmorpg.affix.bone_crossbow": "Bone Crossbow",
-	"mmorpg.affix.bone_helm": "Bone Circlet",
-	"mmorpg.affix.boundless": "Boundless",
-	"mmorpg.affix.chaos_damage_eye": "Unused",
-	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
-	"mmorpg.affix.chaos_res": "Of the Snake",
-	"mmorpg.affix.chaos_res_eye": "Unused",
-	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
-	"mmorpg.affix.cleric_staff": "Cleric Staff",
-	"mmorpg.affix.cold_damage_eye": "Unused",
-	"mmorpg.affix.cold_res_eye": "Unused",
-	"mmorpg.affix.crit_prefix": "Critical",
-	"mmorpg.affix.cursed_staff": "Cursed Staff",
-	"mmorpg.affix.desolation": "Desolation",
-	"mmorpg.affix.dodge_eye": "Unused",
-	"mmorpg.affix.dusk_blade": "Dusk Blade",
-	"mmorpg.affix.ene_ring": "Emerald Ring",
-	"mmorpg.affix.energetic": "Energetic",
-	"mmorpg.affix.energy_reg": "Invirogating",
-	"mmorpg.affix.energy_reg_eye": "Unused",
-	"mmorpg.affix.fire_damage_eye": "Unused",
-	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
-	"mmorpg.affix.fire_res": "Of the Drake",
-	"mmorpg.affix.fire_res_eye": "Unused",
-	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
-	"mmorpg.affix.fire_wep_dmg": "Scorched",
-	"mmorpg.affix.focused": "Focused",
-	"mmorpg.affix.glacial_staff": "Glacial Staff",
-	"mmorpg.affix.gladiator_helm": "Gladiator Helm",
-	"mmorpg.affix.glimmering": "Glimmering",
-	"mmorpg.affix.golden_crown": "Golden Crown",
-	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
-	"mmorpg.affix.heal_crit_prefix": "Truthful",
-	"mmorpg.affix.heal_suff": "Of Restoration",
-	"mmorpg.affix.health_reg_eye": "Unused",
-	"mmorpg.affix.hp_ring": "Coral Ring",
-	"mmorpg.affix.hunter_hood": "Hunter Hood",
-	"mmorpg.affix.immortal": "Immortal",
-	"mmorpg.affix.imperial_bow": "Imperial Bow",
-	"mmorpg.affix.imperial_crossbow": "Imperial Crossbow",
-	"mmorpg.affix.item_both_armor": "Reinforced",
-	"mmorpg.affix.item_both_dodge": "Scaled",
-	"mmorpg.affix.item_both_ms": "Fortified",
-	"mmorpg.affix.item_flat_armor": "Reinforced",
-	"mmorpg.affix.item_flat_dodge": "Scaled",
-	"mmorpg.affix.item_flat_ms": "Fortified",
-	"mmorpg.affix.item_perc_armor": "Reinforced",
-	"mmorpg.affix.item_perc_dodge": "Scaled",
-	"mmorpg.affix.item_perc_ms": "Fortified",
-	"mmorpg.affix.jade_amulet": "Jade Amulet",
-	"mmorpg.affix.lapis_amulet": "Lapis Amulet",
-	"mmorpg.affix.light_res_eye": "Unused",
-	"mmorpg.affix.lightning_damage_eye": "Unused",
-	"mmorpg.affix.lightning_res": "Of the Yeti",
-	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
-	"mmorpg.affix.lightning_staff": "Lightning Staff",
-	"mmorpg.affix.lunaris_circlet": "Lunaris Circlet",
-	"mmorpg.affix.magic_shield_eye": "Unused",
-	"mmorpg.affix.magic_shield_reg_eye": "Unused",
-	"mmorpg.affix.mana_reg": "Soothing",
-	"mmorpg.affix.mana_reg_eye": "Unused",
-	"mmorpg.affix.mana_ring": "Paua Ring",
-	"mmorpg.affix.mana_thief": "Mana Thief's",
-	"mmorpg.affix.mind_cage": "Mind Cage",
-	"mmorpg.affix.ms_reg": "Stabilizing",
-	"mmorpg.affix.ms_ring": "Moonstone Ring",
-	"mmorpg.affix.necro_helmet": "Necromancer Helm",
-	"mmorpg.affix.oakwood_staff": "Oak Wood Staff",
-	"mmorpg.affix.of_affluence": "Of Affluence",
-	"mmorpg.affix.of_azure_skies": "Of Azure Skies",
-	"mmorpg.affix.of_brutality": "Of Brutality",
-	"mmorpg.affix.of_consumption": "Of Consumption",
-	"mmorpg.affix.of_devastation": "Of Devastation",
-	"mmorpg.affix.of_energy": "Of Energy",
-	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
-	"mmorpg.affix.of_gluttony": "Of Gluttony",
-	"mmorpg.affix.of_less_cd": "Of Repetition",
-	"mmorpg.affix.of_mana": "Of Mana",
-	"mmorpg.affix.of_pene": "Of Penetration",
-	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
-	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
-	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
-	"mmorpg.affix.of_the_sky": "Of the Sky",
-	"mmorpg.affix.of_the_titan": "Of the Titan",
-	"mmorpg.affix.of_the_troll": "Of The Troll",
-	"mmorpg.affix.of_the_wind": "Of the Wind",
-	"mmorpg.affix.of_treasure": "Of Treasure",
-	"mmorpg.affix.of_vampirism": "Of Vampirism",
-	"mmorpg.affix.paragon_generosity": "Of Paragon's Generosity",
-	"mmorpg.affix.paragon_grace": "Of Paragon's Grace",
-	"mmorpg.affix.paragon_heart": "Of Paragon's Heart",
-	"mmorpg.affix.paragon_virtue": "Of Paragon's Virtue",
-	"mmorpg.affix.physical_damage_eye": "Unused",
-	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
-	"mmorpg.affix.precise": "Precise",
-	"mmorpg.affix.promised": "Promised",
-	"mmorpg.affix.royal_helm": "Royal Helm",
-	"mmorpg.affix.rusted_sword": "Rusted Sword",
-	"mmorpg.affix.scavanger": "Scavanger",
-	"mmorpg.affix.seraphim": "Seraphim's",
-	"mmorpg.affix.siege_helm": "Siege Helmet",
-	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
-	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
-	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
-	"mmorpg.affix.summon_dmg_eye": "Unused",
-	"mmorpg.affix.thicket_bow": "Thicket Bow",
-	"mmorpg.affix.thicket_crossbow": "Thicket Crossbow",
-	"mmorpg.affix.thorn_rapier": "Thorn Rapier",
-	"mmorpg.affix.true_hit": "True Hit",
-	"mmorpg.affix.twilight_blade": "Twilight Blade",
-	"mmorpg.affix.unknown": "Missing/Removed Affix",
-	"mmorpg.affix.vampiric": "Vampiric",
-	"mmorpg.affix.vdo_mask": "Voodoo Mask",
-	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
-	"mmorpg.affix.water_res": "Of the Storm",
-	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
-	"mmorpg.affix.water_wep_dmg": "Chilled",
-	"mmorpg.affix.wep_item_both": "Miserable",
-	"mmorpg.affix.wep_item_flat": "Deadly",
-	"mmorpg.affix.wep_item_perc": "Cruel",
-	"mmorpg.affix.wildfire_staff": "Wildfire Staff",
-	"mmorpg.affix.wolf_pelt": "Wolf Pelt",
-
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
 
 
 "_comment": " [CATEGORY]: SPELLS - NAMES",
@@ -2390,6 +2256,143 @@
 	"mmorpg.support_gem.water_pene": "Cold Penetration Support Gem",
 
 "_comment": " [CATEGORY]: SPELLS - NAMES",
+
+
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
+
+	"mmorpg.affix.amber_amulet": "Amber Amulet",
+	"mmorpg.affix.arcane_staff": "Arcane Staff",
+	"mmorpg.affix.archeologists": "Archeologist's",
+	"mmorpg.affix.armor_eye": "Unused",
+	"mmorpg.affix.ass_bow": "Assassin Bow",
+	"mmorpg.affix.ass_crossbow": "Assassin Crossbow",
+	"mmorpg.affix.azure": "Azure",
+	"mmorpg.affix.bandit_mask": "Bandit Mask",
+	"mmorpg.affix.bone_bow": "Bone Bow",
+	"mmorpg.affix.bone_crossbow": "Bone Crossbow",
+	"mmorpg.affix.bone_helm": "Bone Circlet",
+	"mmorpg.affix.boundless": "Boundless",
+	"mmorpg.affix.chaos_damage_eye": "Unused",
+	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
+	"mmorpg.affix.chaos_res": "Of the Snake",
+	"mmorpg.affix.chaos_res_eye": "Unused",
+	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
+	"mmorpg.affix.cleric_staff": "Cleric Staff",
+	"mmorpg.affix.cold_damage_eye": "Unused",
+	"mmorpg.affix.cold_res_eye": "Unused",
+	"mmorpg.affix.crit_prefix": "Critical",
+	"mmorpg.affix.cursed_staff": "Cursed Staff",
+	"mmorpg.affix.desolation": "Desolation",
+	"mmorpg.affix.dodge_eye": "Unused",
+	"mmorpg.affix.dusk_blade": "Dusk Blade",
+	"mmorpg.affix.ene_ring": "Emerald Ring",
+	"mmorpg.affix.energetic": "Energetic",
+	"mmorpg.affix.energy_reg": "Invirogating",
+	"mmorpg.affix.energy_reg_eye": "Unused",
+	"mmorpg.affix.fire_damage_eye": "Unused",
+	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
+	"mmorpg.affix.fire_res": "Of the Drake",
+	"mmorpg.affix.fire_res_eye": "Unused",
+	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
+	"mmorpg.affix.fire_wep_dmg": "Scorched",
+	"mmorpg.affix.focused": "Focused",
+	"mmorpg.affix.glacial_staff": "Glacial Staff",
+	"mmorpg.affix.gladiator_helm": "Gladiator Helm",
+	"mmorpg.affix.glimmering": "Glimmering",
+	"mmorpg.affix.golden_crown": "Golden Crown",
+	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
+	"mmorpg.affix.heal_crit_prefix": "Truthful",
+	"mmorpg.affix.heal_suff": "Of Restoration",
+	"mmorpg.affix.health_reg_eye": "Unused",
+	"mmorpg.affix.hp_ring": "Coral Ring",
+	"mmorpg.affix.hunter_hood": "Hunter Hood",
+	"mmorpg.affix.immortal": "Immortal",
+	"mmorpg.affix.imperial_bow": "Imperial Bow",
+	"mmorpg.affix.imperial_crossbow": "Imperial Crossbow",
+	"mmorpg.affix.item_both_armor": "Reinforced",
+	"mmorpg.affix.item_both_dodge": "Scaled",
+	"mmorpg.affix.item_both_ms": "Fortified",
+	"mmorpg.affix.item_flat_armor": "Reinforced",
+	"mmorpg.affix.item_flat_dodge": "Scaled",
+	"mmorpg.affix.item_flat_ms": "Fortified",
+	"mmorpg.affix.item_perc_armor": "Reinforced",
+	"mmorpg.affix.item_perc_dodge": "Scaled",
+	"mmorpg.affix.item_perc_ms": "Fortified",
+	"mmorpg.affix.jade_amulet": "Jade Amulet",
+	"mmorpg.affix.lapis_amulet": "Lapis Amulet",
+	"mmorpg.affix.light_res_eye": "Unused",
+	"mmorpg.affix.lightning_damage_eye": "Unused",
+	"mmorpg.affix.lightning_res": "Of the Yeti",
+	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
+	"mmorpg.affix.lightning_staff": "Lightning Staff",
+	"mmorpg.affix.lunaris_circlet": "Lunaris Circlet",
+	"mmorpg.affix.magic_shield_eye": "Unused",
+	"mmorpg.affix.magic_shield_reg_eye": "Unused",
+	"mmorpg.affix.mana_reg": "Soothing",
+	"mmorpg.affix.mana_reg_eye": "Unused",
+	"mmorpg.affix.mana_ring": "Paua Ring",
+	"mmorpg.affix.mana_thief": "Mana Thief's",
+	"mmorpg.affix.mind_cage": "Mind Cage",
+	"mmorpg.affix.ms_reg": "Stabilizing",
+	"mmorpg.affix.ms_ring": "Moonstone Ring",
+	"mmorpg.affix.necro_helmet": "Necromancer Helm",
+	"mmorpg.affix.oakwood_staff": "Oak Wood Staff",
+	"mmorpg.affix.of_affluence": "Of Affluence",
+	"mmorpg.affix.of_azure_skies": "Of Azure Skies",
+	"mmorpg.affix.of_brutality": "Of Brutality",
+	"mmorpg.affix.of_consumption": "Of Consumption",
+	"mmorpg.affix.of_devastation": "Of Devastation",
+	"mmorpg.affix.of_energy": "Of Energy",
+	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
+	"mmorpg.affix.of_gluttony": "Of Gluttony",
+	"mmorpg.affix.of_less_cd": "Of Repetition",
+	"mmorpg.affix.of_mana": "Of Mana",
+	"mmorpg.affix.of_pene": "Of Penetration",
+	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
+	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
+	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
+	"mmorpg.affix.of_the_sky": "Of the Sky",
+	"mmorpg.affix.of_the_titan": "Of the Titan",
+	"mmorpg.affix.of_the_troll": "Of The Troll",
+	"mmorpg.affix.of_the_wind": "Of the Wind",
+	"mmorpg.affix.of_treasure": "Of Treasure",
+	"mmorpg.affix.of_vampirism": "Of Vampirism",
+	"mmorpg.affix.paragon_generosity": "Of Paragon's Generosity",
+	"mmorpg.affix.paragon_grace": "Of Paragon's Grace",
+	"mmorpg.affix.paragon_heart": "Of Paragon's Heart",
+	"mmorpg.affix.paragon_virtue": "Of Paragon's Virtue",
+	"mmorpg.affix.physical_damage_eye": "Unused",
+	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
+	"mmorpg.affix.precise": "Precise",
+	"mmorpg.affix.promised": "Promised",
+	"mmorpg.affix.royal_helm": "Royal Helm",
+	"mmorpg.affix.rusted_sword": "Rusted Sword",
+	"mmorpg.affix.scavanger": "Scavanger",
+	"mmorpg.affix.seraphim": "Seraphim's",
+	"mmorpg.affix.siege_helm": "Siege Helmet",
+	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
+	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
+	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
+	"mmorpg.affix.summon_dmg_eye": "Unused",
+	"mmorpg.affix.thicket_bow": "Thicket Bow",
+	"mmorpg.affix.thicket_crossbow": "Thicket Crossbow",
+	"mmorpg.affix.thorn_rapier": "Thorn Rapier",
+	"mmorpg.affix.true_hit": "True Hit",
+	"mmorpg.affix.twilight_blade": "Twilight Blade",
+	"mmorpg.affix.unknown": "Missing/Removed Affix",
+	"mmorpg.affix.vampiric": "Vampiric",
+	"mmorpg.affix.vdo_mask": "Voodoo Mask",
+	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
+	"mmorpg.affix.water_res": "Of the Storm",
+	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
+	"mmorpg.affix.water_wep_dmg": "Chilled",
+	"mmorpg.affix.wep_item_both": "Miserable",
+	"mmorpg.affix.wep_item_flat": "Deadly",
+	"mmorpg.affix.wep_item_perc": "Cruel",
+	"mmorpg.affix.wildfire_staff": "Wildfire Staff",
+	"mmorpg.affix.wolf_pelt": "Wolf Pelt",
+
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
 
 
 "_comment": " [CATEGORY]: TAGS - NAMES",
@@ -2615,6 +2618,7 @@
 	"mmorpg.word.corrupted": "Corrupted",
 	"mmorpg.word.corruptsitemharvest": "Turns the Item Corrupted (no benefits)",
 	"mmorpg.word.costs_favor": "Costs %1$s Prophecy Coins",
+	"mmorpg.word.crafted": "Crafted",
 	"mmorpg.word.crate": "Crate",
 	"mmorpg.word.currency": "Currency",
 	"mmorpg.word.current_points": "%1$s Points: %2$s",
@@ -3127,6 +3131,7 @@
 	"mmorpg.stat_desc.dot_dmg_multi": "Increases dmg of effects that do damage over time, like burn. This is a separate multiplier from the usual additive damage increases",
 	"mmorpg.stat_desc.dot_lifesteal": "Restore % of DoT damage as health.",
 	"mmorpg.stat_desc.dot_speed": "Your DOT ailments (burn, poison, bleed) now deal damage faster but also expire faster.",
+	"mmorpg.stat_desc.eff_dur_u_cast": "Increases duration of effects you cast.",
 	"mmorpg.stat_desc.ele_added_dmg": "Adds x element damage on hit.  It's multiplied by damage effectiveness of the hit",
 	"mmorpg.stat_desc.ele_atk_dmg": "Adds x element damage on basic attacks only",
 	"mmorpg.stat_desc.ele_axe_damage": "Increases elemental damage done if it was caused by that weapon",
@@ -3159,6 +3164,7 @@
 	"mmorpg.stat_desc.farming_double_drop": "Chance for profession to double the drop, if it happens",
 	"mmorpg.stat_desc.farming_exp_bonus": "Bonus Profession Exp",
 	"mmorpg.stat_desc.farming_triple_drop": "Chance for profession to triple the drop, if it happens",
+	"mmorpg.stat_desc.faster_projectiles": "Makes your spell projectiles faster",
 	"mmorpg.stat_desc.fire_cast_time": "Reduces cast time of spells with this tag",
 	"mmorpg.stat_desc.fire_cdr": "Reduces spell cooldown of spells with the tag.",
 	"mmorpg.stat_desc.fire_dmg_when_target_low_hp": "Low hp is 30% or less.",
@@ -3248,6 +3254,7 @@
 	"mmorpg.stat_desc.magic_shield_regen": "Restores this much every few seconds.",
 	"mmorpg.stat_desc.magic_spell_dmg": "Increases damage of spells with this tag. Totem Damage increases dmg of totems, etc.",
 	"mmorpg.stat_desc.mana": "Mana is used to cast spells",
+	"mmorpg.stat_desc.mana_cost": "Modifies mana cost of spells",
 	"mmorpg.stat_desc.mana_on_hit_hit": "Adds X amount of resource per hit to leech table and is capped by leech cap",
 	"mmorpg.stat_desc.mana_on_kill": "Leeches resource every time you kill an enemy. This is capped as all other leech",
 	"mmorpg.stat_desc.mana_per_sec": "Restore % of your total per regen tick.",
