--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,3 +7,7 @@ Should be useful when testing or fixing dungeons: /mine_and_slash builder_tool_w
 - map device now drops when broken
 - crafted gear is now labeled
 - gear souls now provide error messages when trying to apply to incorrect item types
+- removed the complex mob processor (the 'spawn;rarity;mobtype' one), it will now just delegate to normal `mob` processor, 
+this means maps should now hopefully have more modded mobs (if datapack-ed in) instead of zombies and skellies
+- stats like "more x per y" and intellect% etc should now benefit from % modifiers. So 5 hp per 1 dodge should now benefit from both hp and dodge, and intellect % should increase mana etc
+WARNING, this bugfix will probably boost player power quite a bit! Probably a good idea to nerf % int etc sources 
